# lambda-tuple

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  cmake-format.yaml  sonar-project.properties
.github/workflows/: build.yml
cmake/: LambdaTupleCompileOptions.cmake  LambdaTupleCoverage.cmake  LambdaTupleGitHooksInstaller.cmake  LambdaTupleInstallGitHooks.cmake  LambdaTupleInstallation.cmake
cmake/hooks/: LambdaTuplePreCommit.cmake.in  pre-commit.in
src/: CMakeLists.txt  tuple.cpp
src/ltpl/: tuple.hpp
test/: CMakeLists.txt  main.cpp  test.hpp  test_cat.hpp  test_comparison.hpp  test_constructor.hpp  test_copy_assignment.hpp  test_dev10_646556_construct_tuple_from_const.hpp  test_dev10_661739_tuple_copy_ctors.hpp  test_dev11_0343056_pair_tuple_ctor_sfinae.hpp  test_dev11_0607540_pair_tuple_rvalue_references.hpp  test_move_assignment.hpp  test_structured_binding.hpp  test_swap.hpp
test/test/: factory.hpp  framework.hpp  precompiled_header.hpp  source_location.hpp  type_name.hpp  utility.hpp
